--- a/portfolio.html
+++ b/portfolio.html
@@ -25,29 +25,34 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="images/technics.jpg" alt="Word Guess">
+        <a href="https://kaiden-m7.github.io/Psychic-Game/" target="_blank">
+        <img src="images/technics.jpg" alt="Word Guess"></a>
 
         <h3>Word Guess</h3>
       </div>
       <div class="work">
-        <img src="images/technics2.jpg" alt="RPG Game">
+        <a href="https://kaiden-m7.github.io/Unit-4-Game/" target="_blank">
+        <img src="images/technics2.jpg" alt="RPG Game"></a>
 
-        <h3>RPG Game</h3>
+        <h3>Collector Game</h3>
       </div>
       <div class="work">
-        <img src="images/technics3.jpg" alt="Trivia Game">
+        <a href="https://kaiden-m7.github.io/TriviaGame/" target="_blank">
+        <img src="images/trivia.jpg" alt="Trivia Game"></a>
 
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-        <img src="images/technics4.jpg" alt="Rutgers Info Widget">
+        <a href="https://kaiden-m7.github.io/Giphy-API/" target="_blank">
+        <img src="images/technics4.jpg" alt="Giphy API"></a>
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Giphy API</h3>
       </div>
       <div class="work">
-        <img src="images/technics5.jpg" alt="Rock Paper Scissors">
+        <a href="https://alaclair.github.io/Space_Travel_App/" target="_blank"></a>
+        <img src="images/space.png" alt="Collaberation Project">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>Collaberation Project</h3>
       </div>
 
     </section>
