adding links for resume and personal contact info

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,29 +26,29 @@
 
       <div class="work">
         <a href="https://kaiden-m7.github.io/Psychic-Game/" target="_blank">
-        <img src="images/technics.jpg" alt="Word Guess"></a>
+        <img src="images/word.jpg" alt="Word Guess"></a>
 
         <h3>Word Guess</h3>
       </div>
       <div class="work">
         <a href="https://kaiden-m7.github.io/Unit-4-Game/" target="_blank">
-        <img src="images/technics2.jpg" alt="RPG Game"></a>
+        <img src="images/crystal.jpg" alt="collector game"></a>
 
         <h3>Collector Game</h3>
       </div>
-      <div class="work">
+      <div class="work" id="trivia">
         <a href="https://kaiden-m7.github.io/TriviaGame/" target="_blank">
         <img src="images/trivia.jpg" alt="Trivia Game"></a>
 
         <h3>Trivia Game</h3>
       </div>
-      <div class="work">
+      <div class="work" id="giphy">
         <a href="https://kaiden-m7.github.io/Giphy-API/" target="_blank">
-        <img src="images/technics4.jpg" alt="Giphy API"></a>
+        <img src="images/music.jpg" alt="Giphy API"></a>
 
         <h3>Giphy API</h3>
       </div>
-      <div class="work">
+      <div class="work" id="colab">
         <a href="https://alaclair.github.io/Space_Travel_App/" target="_blank"></a>
         <img src="images/space.png" alt="Collaberation Project">
 
