--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
 
       <img src="images/pic2.jpg" class="auth-image" alt="Kaiden Munsey" width="150px" height="230px">
 
-      <p>Hello friends! My name is Kaiden Munsey and I am 28 years old. I currently live in Brooksville Fl; which is roughly an hour Norh of Tampa. On my free time I love being outside doing yard work, or hanging out with my friends and family.I am a dog lover and have a 4 year old Pitbull of my own named Chase, and as an animal lover of course he is my world. </p>
+      <p>Hello friends! My name is Kaiden Munsey and I am 29 years old. I currently live in Brooksville Fl; which is roughly an hour North of Tampa. On my free time I love being outside doing yard work, or hanging out with my friends and family.I am a dog lover and have a 4 year old Pitbull of my own named Chase, and as an animal lover of course he is my world. </p>
 
       <p>I am the oldest of four children with three beautiful younger sisters. Family is my number one focus and we see each other as often as we can. Right now I am an Executive Chef at a retirement home located here in Brooksville. I have been there for ten years and the Chef for six. I love cooking and have since I could reach the counter. Doing it profetionally has been great and I've challenged myself in so many ways; and now my newest challenge is to become a Developer and learn something new; making a new chapter in my crazy fun life.  </p>
-
-
+      <p>Email: <i>Kaidenmunsey7@gmail.com</i></p>
+      <p>Mobile Number: <i>(352)263-6657</i></p>
+      <p>
+      <a href="https://www.linkedin.com/in/kaiden-munsey-4781611a3/" target="_blank">Find me on Linkedin</a>
+      <br>
+      <a href="https://github.com/kaiden-m7" target="_blank">Check me out on Github</a><br>
+      <a href="resume.pdf" target="_blank">Click here to view Resume</a>
+      </p>
     </section>
 
   </div>
